# gloves

./: README.md
:backend/app/: config.py
:backend/app/routers/: apply_actions.py  globece.py  groupcfe.py  resources.py
:backend/app/services/: resources_t_glance.py
:backend/methods/globe_ce/: ares.py  helper_functions.py  models.py
:frontend/: .eslintrc.json  .gitignore  TODO.txt  svgr.d.ts
:frontend/src/store/: store.ts
GLoVE_UI/: index.html  nginx.conf  package.json  vite.config.ts
GLoVE_UI/src/: App.tsx  routes.tsx
GLoVE_UI/src/store/: store.ts
GlanceDemoPaper-main/: .gitignore  COMPAS.ipynb  README.md  pyproject.toml  requirements.txt
GlanceDemoPaper-main/app/: config.py  main.py
GlanceDemoPaper-main/app/routers/: apply_actions.py  c_glance.py  resources.py  t_glance.py  umap.py  upload.py
GlanceDemoPaper-main/app/services/: resources_service.py
GlanceDemoPaper-main/src/glance/counterfactual_tree/: counterfactual_tree.py
GlanceDemoPaper-main/src/glance/iterative_merges/: iterative_merges.py
GlanceDemoPaper-main/src/glance/local_cfs/: __init__.py  nearest_neighbor.py
GlanceDemoPaper-main/src/glance/utils/: dnn_with_preprocess_module.py  metadata_requests.py  utils_data.py
backend:/: .gitignore  COMPAS.ipynb  README.md  dump.rdb  requirements.txt
backend:/app/: main.py
backend:/app/routers/: c_glance.py  t_glance.py  umap.py
backend:/app/services/: resources_service.py
backend:/methods/globe_ce/: datasets.py  (+1 more)
frontend:/: README.md  index.html  nginx.conf  package.json  vite.config.ts
frontend:/src/: not-found.tsx  routes.tsx
(+56 files in other folders)
